--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -140,9 +140,9 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="/">Manage Gene Favorite (0)</a></li>
-                    <li class="menu-item"><a href="/">Create Gene Favorite(s)</a></li>
-                    <li class="menu-item"><a href="/">Select Genes for a New Workbook</a></li>
+                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene Favorite (0)</a></li>
+                    <li class="menu-item"><a href="{% url 'create_genes_list' %}">Create Gene Favorite(s)</a></li>
+                    <li class="menu-item"><a href="{% url 'genes' %}">Select Genes for a New Workbook</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
