--- a/blink_sass/style.sass
+++ b/blink_sass/style.sass
@@ -7,6 +7,7 @@
 // --------------------------------------------
 @import url("/static/css/font-awesome.min.css")
 @import url("/static/css/vendor.css")
+@import url("/static/css/bootstrap-tokenfield.min.css")
 
 // ----------------------------------
 // Import basic settings
@@ -21,6 +22,7 @@
 // --------------------------------------------
 @import basic
 @import button
+@import form
 
 @import cohorts
 @import home
