--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -3,31 +3,31 @@
         <div class="panel panel-default">
             <div class="panel-body">
                 <label for="build">Build</label>
-                <select aria-label="Build" class="form-control build">
+                <select aria-label="Build" id="all-build" class="form-control build">
                     <option value="HG38" {% if build == 'HG38' %}selected{% endif %}>HG38</option>
                     <option value="HG19" {% if build == 'HG19' %}selected{% endif %}>HG19</option>
                 </select>
             </div>
         </div>
         <div class="panel filter-panel panel-default">
-            <div class="panel-body tab-content" id="all-filter-panel">
+            <div class="panel-body tab-content filter-build-panel" data-filter-build="HG19" id="all-filter-panel-HG19">
                 <ul class="list-group" id="metadata-data-accordian-all" role="tablist" aria-multiselectable="true">
-                    {% for attr in metadata_data_attr %}
+                    {% for attr in metadata_data_attr.HG19 %}
                         <li class="list-group-item">
-                            <div id="heading-{{attr.name}}" class="list-group-item__heading">
-                                <a role="button" data-toggle="collapse" data-parent="#metadata-data-accordian-all" href="#collapse-all-{{ attr.name }}" aria-expanded="false" aria-controls="collapse-all-{{ attr.name }}">
+                            <div id="heading-all-hg19-{{attr.name}}" class="list-group-item__heading">
+                                <a role="button" data-toggle="collapse" data-parent="#metadata-data-accordian-all" href="#collapse-all-hg19-{{ attr.name }}" aria-expanded="false" aria-controls="collapse-all-hg19-{{ attr.name }}">
                                     <i class="fa fa-caret-right"></i><i class="fa fa-caret-down"></i> {{ attr.displ_name }}
                                 </a>
                             </div>
-                            <div id="collapse-all-{{ attr.name }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel" data-feature-type="donor"
-                                 aria-labelledby="heading-all-{{ attr.name }}" data-feature-name="{{ attr.name }}" data-feature-displ-name="{{ attr.displ_name }}">
+                            <div id="collapse-all-hg19-{{ attr.name }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel" data-feature-type="donor"
+                                 aria-labelledby="heading-all-hg19-{{ attr.name }}" data-feature-name="{{ attr.name }}" data-feature-displ-name="{{ attr.displ_name }}">
                                 <ul class="search-checkbox-list" id="all-{{ attr.name }}">
                                     {% with attr.values|how_many_more:6 as num_more %}
                                         {% for v in attr.values|check_for_order:attr.name %}
                                             {% if forloop.counter0 < 6 %}
                                                 <li class="checkbox">
                                                     <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
-                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-{{ attr.name }}-{{ v.value }}"
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-HG19-{{ attr.name }}-{{ v.value }}"
                                                                data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
                                                         {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_value }}{% else %}{{ v.name }}{% endif %}
                                                          <span class="count">({{ v.count }})</span>
@@ -37,7 +37,7 @@
                                                 <p class="more-checks"><a class="show-more">{{ num_more }} more</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
                                                 <li class="extra-values checkbox" style="display:none;">
                                                     <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
-                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-{{ attr.name}}-{{ v.value }}"
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-HG19-{{ attr.name}}-{{ v.value }}"
                                                                data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
                                                         {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.name }}{% endif %}
                                                          <span class="count">({{ v.count }})</span>
@@ -46,7 +46,61 @@
                                             {% else %}
                                                 <li class="extra-values checkbox" style="display:none;">
                                                     <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
-                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-{{ attr.name }}-{{ v.value }}"
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-HG19-{{ attr.name }}-{{ v.value }}"
+                                                               data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
+                                                        {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.name }}{% endif %}
+                                                         <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                        {% if num_more > 0 %}
+                                            <p class="less-checks" style="display: none;"><a class="show-less">less</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
+                                        {% endif %}
+                                    {% endwith %}
+                                </ul>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="panel-body tab-content filter-build-panel" data-filter-build="HG38" id="all-filter-panel-HG38" style="display: none;">
+                <ul class="list-group" id="metadata-data-accordian-all" role="tablist" aria-multiselectable="true">
+                    {% for attr in metadata_data_attr.HG38 %}
+                        <li class="list-group-item">
+                            <div id="heading-all-hg38-{{attr.name}}" class="list-group-item__heading">
+                                <a role="button" data-toggle="collapse" data-parent="#metadata-data-accordian-all" href="#collapse-all-hg38-{{ attr.name }}" aria-expanded="false" aria-controls="collapse-all-hg38-{{ attr.name }}">
+                                    <i class="fa fa-caret-right"></i><i class="fa fa-caret-down"></i> {{ attr.displ_name }}
+                                </a>
+                            </div>
+                            <div id="collapse-all-hg38-{{ attr.name }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel" data-feature-type="donor"
+                                 aria-labelledby="heading-all-hg38-{{ attr.name }}" data-feature-name="{{ attr.name }}" data-feature-displ-name="{{ attr.displ_name }}">
+                                <ul class="search-checkbox-list" id="all-{{ attr.name }}">
+                                    {% with attr.values|how_many_more:6 as num_more %}
+                                        {% for v in attr.values|check_for_order:attr.name %}
+                                            {% if forloop.counter0 < 6 %}
+                                                <li class="checkbox">
+                                                    <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-HG38-{{ attr.name }}-{{ v.value }}"
+                                                               data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
+                                                        {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_value }}{% else %}{{ v.name }}{% endif %}
+                                                         <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% elif forloop.counter0 == 6 and num_more > 0 %}
+                                                <p class="more-checks"><a class="show-more">{{ num_more }} more</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
+                                                <li class="extra-values checkbox" style="display:none;">
+                                                    <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-HG38-{{ attr.name}}-{{ v.value }}"
+                                                               data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
+                                                        {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.name }}{% endif %}
+                                                         <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% else %}
+                                                <li class="extra-values checkbox" style="display:none;">
+                                                    <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-HG38-{{ attr.name }}-{{ v.value }}"
                                                                data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
                                                         {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.name }}{% endif %}
                                                          <span class="count">({{ v.count }})</span>
@@ -68,9 +122,9 @@
     </div>
     <div id="all-file-panel" class="col-lg-9 col-md-9 col-sm-9">
         <div class="filelist-panel panel">
-            <div id="file-list-warning" class="alert alert-warning alert-dismissable" style="display: none;">
+            <div id="" class="alert alert-warning alert-dismissable file-list-warning" style="display: none;">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                The maximum number of files which can be downloaded in a list is <span class="file-list-limit">#</span>. Your selections currently total
+                The maximum number of files which can be downloaded in a list is <span class="file-list-limit">{{ sel_file_max }}</span>. Your selections currently total
                 <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left (or make a smaller cohort) to limit the size of your file download list.
             </div>
             <div class="panel-heading">
@@ -79,7 +133,7 @@
                     <ul>
                         <li class="menu-item">
                             <div class="filelist-obtain">
-                                <a id="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info">CSV</button></a>{# <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>#}
+                                <a class="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info">CSV</button></a>{# <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>#}
                             </div>
                         </li>
 {#                        <li class="menu-item">#}
