--- a/templates/cohorts/cohort_filelist_camic.html
+++ b/templates/cohorts/cohort_filelist_camic.html
@@ -58,4 +58,7 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript">
+    var total_files = {{ total_file_count|safe }};
+    var file_listing = {{ file_list|tojson|safe }};
+</script>
