--- a/templates/variables/variable_list_modals.html
+++ b/templates/variables/variable_list_modals.html
@@ -28,12 +28,12 @@
             <form class="new-workbook" id="edit-workbook" method="POST" action="{% url 'worksheet_create_with_variables' %}">
                 {% csrf_token %}
                 <div class="modal-body">
-                    <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable unallowed-chars-alert-wb" style="display: none;">
+                    <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable unallowed-chars-wb-alert" style="display: none;">
                         <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                         Your workbook's name contains invalid characters (<span class="unallowed-chars-wb"></span>). Please choose another name.
                     </div>
                     <label for="name-{{ favorite.id }}">Name (required)</label>
-                    <input id="name-{{ favorite.id }}" class="form-control workbook-name" type="text" name="name" value="{{ favorite.name }} workbook"/>
+                    <input id="name-{{ favorite.id }}" class="form-control new-workbook-name" type="text" name="name" value="{{ favorite.name }} workbook"/>
                     <input type="hidden" name="variable_list_id" value="{{ favorite.id }}" />
                 </div>
                 <div class="modal-footer">
