--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -128,6 +128,8 @@
         &.dataset-list
             list-style: none
             padding: 0px
+    input
+        margin-bottom: 5px
 
 #register-gcp
     ol>li
